@@ -2,6 +2,9 @@ CVS code -
 - configure.in:
 	- Fix for _use_keypad check breaking slang support (Christian
 	  Weisgerber).
+- faq.html:
+	- Added some info on making the binary smaller with the configure
+	  script.
 - files.c:
   real_dir_from_tilde()
 	- Oops, fix case where buf ="~", silly crash (bug discovered by
